@@ -6,10 +6,9 @@ const hasRequiredProperties = hasProperties(
   "mobile_number",
   "reservation_date",
   "reservation_time",
-  "people",
+  "people"
 );
 const asyncErrorBoundary = require("../errors/asyncErrorBoundary");
-
 
 /**
  * List handler for reservation resources
@@ -17,6 +16,7 @@ const asyncErrorBoundary = require("../errors/asyncErrorBoundary");
 
 // middleware for create, update
 
+// confirm no extraneous properties are input
 const VALID_PROPERTIES = [
   "first_name",
   "last_name",
@@ -41,7 +41,7 @@ function hasOnlyValidProperties(req, res, next) {
   next();
 }
 
-// number of people in reservation is a number >1
+// confirm number of people in reservation is a number >1
 function hasPeople(req, res, next) {
   const { data: { people } = {} } = req.body;
   if (typeof people !== "number" || people < 1)
@@ -52,7 +52,7 @@ function hasPeople(req, res, next) {
   next();
 }
 
-// date is in the correct format
+// confirm date is in the correct format
 const dateFormat = /^\d\d\d\d-\d\d-\d\d$/;
 
 async function isDate(req, res, next) {
@@ -66,48 +66,50 @@ async function isDate(req, res, next) {
   next();
 }
 
-function asDateString(date) {
-  return `${date.getFullYear().toString(10)}-${(date.getMonth() + 1)
-    .toString(10)
-    .padStart(2, "0")}-${date.getDate().toString(10).padStart(2, "0")}`;
-}
+// set date in local time zone
+// function toLocalTime() {
+//   const serverTimeZone = "America/New_York";
+//   const requestedDate = new Date(reservation_date);
+//   console.log("Same date as a Date object: ", requestedDate);
+//   console.log(
+//     "Now the date is local",
+//     requestedDate.toLocaleString("en-US", { timeZone: serverTimeZone })
+//   );
+//   return (localDate = requestedDate.toLocaleString("en-US", {
+//     timeZone: serverTimeZone,
+//   }));
+// }
 
-function today() {
-  return asDateString(new Date());
-}
-
-// Date is in the future
+// confirm date is in the future
 async function dateIsFuture(req, res, next) {
-  const today = new Date()
   const { data: { reservation_date } = {} } = req.body;
-  const requestedDate = new Date(reservation_date);
-  if (today > requestedDate) {
+  console.log("Here's the input date: ", reservation_date);
+  const localDate = toLocalTime(reservation_date);
+  const today = new Date();
+  if (today > localDate) {
     return next({
       status: 400,
       message: "The reservation_date must be in the future.",
-    })
-  };
+    });
+  }
   next();
 }
 
-// Date is not a Tuesday
+// confirm date is not a Tuesday
 async function dayIsValid(req, res, next) {
-  const { data: { reservation_date } = {} } = req.body;
-  console.log("Reservation Date input: ", reservation_date);
-  const formattedReservationDate = new Date(reservation_date);
-  console.log("Formatted Date", formattedReservationDate);
-  const reservationDay = formattedReservationDate.getUTCDay();
+  const reservationDay = localDate.getUTCDay();
   console.log("Is it a Tuesday?", reservationDay);
   if (reservationDay === 2) {
     return next({
       status: 400,
       message: "Periodic Tables is closed on Tuesdays.",
-    })
-  };
+    });
+  }
   next();
 }
 
-// time is in the correct format
+
+// confirm time is in the correct format
 async function isTime(req, res, next) {
   const timeFormat = /^\d\d:\d\d$/;
   const { data: { reservation_time } = {} } = req.body;
@@ -118,6 +120,18 @@ async function isTime(req, res, next) {
     });
   }
   return next();
+}
+
+// confirm time is between 10:30 am and 9:30 pm
+async function timeIsValid(req, res, next) {
+const { data: { reservation_time } = {} } = req.body;
+if (!"10:30" <= reservation_time || !reservation_time <= "21:30") {
+  return next({
+    status: 400,
+    message: "Reservation time must be between 10:30 am and 9:30 pm.",
+  })
+}
+next();
 }
 
 async function create(req, res) {
@@ -157,6 +171,7 @@ module.exports = {
     dateIsFuture,
     dayIsValid,
     isTime,
+    timeIsValid,
     asyncErrorBoundary(create),
   ],
   list: asyncErrorBoundary(list),
