@@ -40,3 +40,5 @@
 -       troubleshooting until all tests for US-#1 pass
 -       completed 2 functions to validate that the date is in the
         future and is not a Tuesday when the restaurant is closed
+- US-#3: (for User Story #3)
+-       Writing middleware to confirm time is between 10:30-21:30
